Add new command

--- a/data/tools.yaml
+++ b/data/tools.yaml
@@ -1,4 +1,5 @@
 title: Tools
+description: Tools built on the top of IPFS.
 content:
 - name: cachewarmer
   url: https://github.com/BrendanBenshoof/cachewarmer
